# lyrics-inline-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  bot.py  docker-compose.yml  dockerfile.md  pyproject.toml  pytest.ini  railway.toml  requirements.txt
.github/: dependabot.ym
.github/workflows/: python.yml
bot/: __init__.py  __main__.py  app.py  config.py
bot/handlers/: __init__.py  callback.py  chosen.py  error.py  health.py  help.py  init.py  inline.py  start.py  version.py
bot/models/: __init__.py  song.py
bot/services/: __init__.py  cache.py  formatter.py  genius.py  lrclib.py  paginator.py  rate_limiter.py  serializer.py
bot/utils/: __init__.py  constants.py  context.py  formatters.py  logging.py  middlewares.py  requirements_check.py  text.py  validators.py  version.py
core/: config.py  init.py  logger.py
handlers/: __init__.py  callbacks.py  chosen.py  errors.py  health.py  init.py  inline.py  start.py
models/: init.py  song.py
scripts/: entrypoint.sh
services/: cache.py  formatter.py  genius.py  http_clinet.py  init.py  logger.py  lyrics_formatter.py
tests/: __init__.py  test_cache.py  test_formatter.py  test_imports.py  test_song.py  test_validators.py
utils/: exceptions.py  healthcheck.py  logger.py
