[project]
name = "lyrics-inline-bot"
version = "1.0.0"
description = "Telegram inline bot for searching and sending Genius lyrics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]